[metadata]
name = banana_export
version = 1.0.0
description = Banana Buchhaltung CSV Export aus ERPNext
long_description = file: README.md
long_description_content_type = text/markdown
author = Joker IT AG
author_email = info@jokerit.ch
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    frappe
